# malloc.polish_bond_site

./: .gitignore  Dockerfile  pyproject.toml
src/malloc/polish_bond_site/: dependencies.py  main.py  scripts.py
src/malloc/polish_bond_site/templates/: base.html  bond_detail.html  index.html
src/malloc/polish_bond_site/translations/: en.json  pl.json
