[project]
name = "malloc-polish-bond-site"
version = "1.0.0"
description = "FastAPI web service serving Polish retail bond data"
authors = [{name = "Michał Węgrzynek", email = "michal.wegrzynek@malloc.com.pl"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "requests>=2.31.0",
    "pydantic-settings>=2.2.1",
    "jinja2>=3.0.0",
    "aiofiles>=23.0.0",
    "malloc-polish-bond>=1.0.6",
]

[project.scripts]
start = "malloc.polish_bond_site.scripts:start"

[tool.uv.sources]
malloc-polish-bond = {workspace = true}

[dependency-groups]
dev = [
    "pytest>=8.0.1",
]

[build-system]
requires = ["uv_build>=0.6,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "malloc.polish_bond_site"
